--- a/src/main.css
+++ b/src/main.css
@@ -7,3 +7,14 @@
   display: block;
   margin: 20px auto;
 }
+.second-column {
+  height: 0.5em;
+}
+.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+  height: 0.1em !important;
+  padding: 0px;
+}
+.css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input.MuiSelect-select{
+  height: 2em !important;
+  padding: 0px;
+}
